--- a/index.html
+++ b/index.html
@@ -1,196 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nex Network AI</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: 'Poppins', sans-serif;
-            background-color: #0f0f0f;
-            color: #f5f5f5;
-            line-height: 1.6;
-        }
-
-        header {
-            background: linear-gradient(135deg, #1a1a1a, #2e2e2e);
-            padding: 20px 0;
-            text-align: center;
-        }
-
-        header h1 {
-            font-size: 3.5em;
-            color: #f39c12;
-            margin-bottom: 5px;
-            letter-spacing: 1px;
-            text-transform: uppercase;
-        }
-
-        nav ul {
-            display: flex;
-            justify-content: center;
-            list-style: none;
-            margin-top: 10px;
-        }
-
-        nav ul li {
-            margin: 0 20px;
-        }
-
-        nav ul li a {
-            color: #f5f5f5;
-            font-size: 1.1em;
-            text-decoration: none;
-            padding: 8px 20px;
-            border-radius: 25px;
-            font-weight: 500;
-        }
-
-        nav ul li a:hover {
-            background-color: #f39c12;
-            color: #0f0f0f;
-        }
-
-        .hero {
-            background: url('https://source.unsplash.com/1600x600/?gaming') no-repeat center center/cover;
-            height: 70vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            position: relative;
-        }
-
-        .hero::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            background: rgba(0, 0, 0, 0.6);
-        }
-
-        .hero h2 {
-            font-size: 3.5em;
-            color: #f5f5f5;
-            z-index: 1;
-            text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
-            text-align: center;
-        }
-
-        .model-select {
-            margin: 20px auto;
-            text-align: center;
-        }
-
-        select {
-            padding: 10px;
-            font-size: 1.2em;
-            border-radius: 5px;
-            border: 1px solid #ccc;
-            background-color: #1f1f1f;
-            color: #f5f5f5;
-        }
-
-        .search-bar {
-            margin-top: 60px;
-            display: flex;
-            justify-content: center;
-        }
-
-        .search-bar input {
-            padding: 15px;
-            width: 400px;
-            border-radius: 30px;
-            border: none;
-            font-size: 1em;
-            outline: none;
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
-        }
-
-        footer {
-            background-color: #1f1f1f;
-            color: #bbb;
-            text-align: center;
-            padding: 30px 20px;
-            margin-top: 50px;
-        }
-
-        footer p {
-            margin-bottom: 10px;
-            font-size: 1em;
-        }
-
-        @media (max-width: 768px) {
-            .search-bar input {
-                width: 80%;
-            }
-        }
-    </style>
-</head>
-<body>
-
-    <header>
-        <h1>Nex Network AI</h1>
-        <nav>
-            <ul>
-                <li><a href="#">Cheats</a></li>
-                <li><a href="#">Mods</a></li>
-                <li><a href="#">Dev Tools</a></li>
-                <li><a href="#">Community</a></li>
-            </ul>
-        </nav>
-    </header>
-
-    <section class="hero">
-        <h2>Unlock Your Gaming Potential with Cheats, Mods & Dev Tools</h2>
-    </section>
-
-    <div class="model-select">
-        <select id="model-select">
-            <option value="gpt">GPT</option>
-            <option value="stable_diffusion">Stable Diffusion</option>
-            <option value="dalle">DALL·E</option>
-            <option value="nex_network_ai">Nex Network AI</option>
-        </select>
-    </div>
-
-    <div class="search-bar">
-        <input type="text" id="prompt-input" placeholder="Enter your prompt...">
-        <button id="submit-button">Submit</button>
-    </div>
-
-    <footer>
-        <p>&copy; 2024 Nex Network AI</p>
-    </footer>
-
-    <script>
-        document.getElementById('submit-button').addEventListener('click', async () => {
-            const model = document.getElementById('model-select').value;
-            const prompt = document.getElementById('prompt-input').value;
-
-            try {
-                const response = await fetch('/generate_text', {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json'
-                    },
-                    body: JSON.stringify({ prompt, model })
-                });
-
-                const data = await response.json();
-                alert(data.response);
-            } catch (error) {
-                console.error('Error:', error);
-                alert('There was an error processing your request.');
-            }
-        });
-    </script>
-</body>
-</html>
+test
