--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         body {
             margin: 0;
             font-family: 'Arial', sans-serif;
-            background: linear-gradient(135deg, #1f1c2c, #928dab);
+            background: linear-gradient(135deg, #2b002b, #000000);
             color: #fff;
             display: flex;
             flex-direction: column;
@@ -35,7 +35,7 @@
             transition: color 0.3s;
         }
         nav a:hover {
-            color: #ff4081;
+            color: #d16ba5;
         }
         .container {
             text-align: center;
@@ -47,7 +47,7 @@
         .container h1 {
             font-size: 2.5rem;
             margin-bottom: 1rem;
-            color: #ff4081;
+            color: #d16ba5;
         }
         .container p {
             font-size: 1.2rem;
