--- a/index.html
+++ b/index.html
@@ -8,13 +8,20 @@
         body {
             margin: 0;
             font-family: 'Arial', sans-serif;
-            background: linear-gradient(135deg, #1e3c72 0%, #2a5298 100%);
+            background: url('background-image.jpg') no-repeat center center fixed;
+            background-size: cover;
             color: #fff;
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
-            flex-direction: column;
+            text-align: center;
+        }
+        .container {
+            background: rgba(0, 0, 0, 0.6);
+            padding: 20px;
+            border-radius: 10px;
+            backdrop-filter: blur(5px);
         }
         h1 {
             font-size: 3em;
@@ -23,12 +30,12 @@
         }
         .buttons {
             display: flex;
-            gap: 15px;
+            gap: 20px;
             margin-bottom: 20px;
         }
         .buttons a {
             text-decoration: none;
-            padding: 10px 20px;
+            padding: 12px 25px;
             border-radius: 25px;
             background: #4a90e2;
             color: #fff;
@@ -57,15 +64,16 @@
     </style>
 </head>
 <body>
-    <h1>Welcome to my portfolio</h1>
-    <div class="buttons">
-        <a href="#about">ABOUT ME</a>
-        <a href="#interests">MY INTERESTS</a>
-        <a href="#friends">MY FRIENDS</a>
+    <div class="container">
+        <h1>Welcome to my portfolio</h1>
+        <div class="buttons">
+            <a href="#about">ABOUT ME</a>
+            <a href="#interests">MY INTERESTS</a>
+            <a href="#friends">MY FRIENDS</a>
+        </div>
+        <div class="clock" id="clock">10:10:11 AM</div>
+        <div class="date">Monday, October 7, 2024</div>
     </div>
-    <div class="clock" id="clock">10:10:11 AM</div>
-    <div class="date">Monday, October 7, 2024</div>
-
     <script>
         function updateClock() {
             const now = new Date();
