--- a/index.html
+++ b/index.html
@@ -1,1 +1,37 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>MathLearning.art</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Practice</a></li>
+                <li><a href="#">Leaderboard</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section id="typing">
+            <h1>Welcome to MathLearning.art</h1>
+            <div id="typing-area"></div>
+            <div id="progress-bar"></div>
+            <div id="stats">
+                <p>Speed: <span id="speed">0</span> WPM</p>
+                <p>Accuracy: <span id="accuracy">0</span>%</p>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2025 MathLearning.art</p>
+    </footer>
+    <script src="script.js"></script>
+</body>
+</html>
