--- a/index.html
+++ b/index.html
@@ -4,7 +4,93 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MathLearning.art</title>
-    <link rel="stylesheet" href="styles.css">
+    <style>
+        body {
+            font-family: 'Helvetica Neue', Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #121212;
+            color: #FFFFFF;
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
+        }
+        header {
+            background-color: #1F1F1F;
+            padding: 20px 0;
+            text-align: center;
+        }
+        nav ul {
+            list-style: none;
+            display: flex;
+            justify-content: center;
+            padding: 0;
+            margin: 0;
+        }
+        nav li {
+            margin: 0 20px;
+        }
+        nav a {
+            color: #FFFFFF;
+            text-decoration: none;
+            font-weight: bold;
+            transition: color 0.3s;
+        }
+        nav a:hover {
+            color: #FF0000;
+        }
+        main {
+            flex: 1;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            padding: 50px 20px;
+        }
+        #typing-area {
+            margin: 20px 0;
+            padding: 20px;
+            border: 2px solid #FF0000;
+            border-radius: 10px;
+            background-color: #333333;
+            width: 80%;
+            max-width: 800px;
+            font-size: 1.2em;
+        }
+        #progress-bar {
+            width: 100%;
+            height: 20px;
+            background-color: #555555;
+            margin: 20px 0;
+            position: relative;
+            border-radius: 10px;
+            overflow: hidden;
+        }
+        #progress-bar::after {
+            content: '';
+            display: block;
+            width: 0;
+            height: 100%;
+            background-color: #FF0000;
+            position: absolute;
+            top: 0;
+            left: 0;
+            transition: width 0.3s;
+        }
+        #stats {
+            display: flex;
+            justify-content: center;
+            gap: 30px;
+        }
+        #stats p {
+            margin: 0;
+        }
+        footer {
+            background-color: #1F1F1F;
+            padding: 10px 0;
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
     <header>
