--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             min-height: 100vh;
         }
         header {
-            background-color: #202020;
-            padding: 20px 0;
+            background-color: #1F1F1F;
+            padding: 20px;
             text-align: center;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
         }
@@ -29,7 +29,7 @@
             margin: 0;
         }
         nav li {
-            margin: 0 20px;
+            margin: 0 15px;
         }
         nav a {
             color: #ffffff;
@@ -46,7 +46,7 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            padding: 50px 20px;
+            padding: 40px 20px;
         }
         #typing-area {
             margin: 20px 0;
@@ -56,11 +56,13 @@
             background-color: #333333;
             width: 80%;
             max-width: 800px;
-            font-size: 1.2em;
+            font-size: 1.5em;
             text-align: center;
             outline: none;
             caret-color: #ff5722;
             color: #ffffff;
+            white-space: pre-wrap;
+            word-wrap: break-word;
         }
         #progress-bar {
             width: 100%;
@@ -92,7 +94,7 @@
             margin: 0;
         }
         footer {
-            background-color: #202020;
+            background-color: #1F1F1F;
             padding: 10px 0;
             text-align: center;
         }
